--- a/.config
+++ b/.config
@@ -1,8 +1,9 @@
 HAL - Prozessoren :
-1 Pfad zum Hal - Programm fuer HAL - Prozessor 1
-2 Pfad zum Hal - Programm fuer HAL - Prozessor 2
-...
-n Pfad zum Hal - Programm fuer HAL - Prozessor n
+0 p0.hal
+1 p1.hal
+2 p2.hal
+3 p3.hal
 HAL - Verbindungen :
+0:3 > 1:2
 1:3 > 2:2
-2:4 > 3:5
+2:3 > 3:2
